[package]
name = "ws_ugv_protocol"
version = "0.1.0"
edition = "2021"

# Custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
futures = { version = "0.3.*" }
tokio = {version = "^1.8", features = ["full"] }
tokio-serial = "*"
r2r = ">=0.9"